add some components, routing, extra functionality

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import 'bootstrap/dist/css/bootstrap.min.css';
+
+.list-item {
+  background-color: white;
+  border: 0;
+  text-align: start;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.list-item:hover {
+  opacity: 0.6;
+}
+
+.list {
+  width: 45%;
+}
+
+.img-container {
+  /* overflow: hidden; */
+  text-align: center;
+}
+
+.img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  /* border: 1px solid black; */
 }
